--- a/SistemaAcademico.csproj
+++ b/SistemaAcademico.csproj
@@ -12,7 +12,6 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publicar\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -25,6 +24,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -77,6 +77,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asignaturas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Asignaturas.Designer.cs">
+      <DependentUpon>Asignaturas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Calificaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Calificaciones.Designer.cs">
+      <DependentUpon>Calificaciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="Conexion.cs" />
     <Compile Include="DataSet.cs">
       <DependentUpon>DataSet.xsd</DependentUpon>
@@ -134,11 +146,11 @@
     <Compile Include="Matriculas.Designer.cs">
       <DependentUpon>Matriculas.cs</DependentUpon>
     </Compile>
-    <Compile Include="NotasEstudiante.cs">
+    <Compile Include="NOTAS.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NotasEstudiante.Designer.cs">
-      <DependentUpon>NotasEstudiante.cs</DependentUpon>
+    <Compile Include="NOTAS.Designer.cs">
+      <DependentUpon>NOTAS.cs</DependentUpon>
     </Compile>
     <Compile Include="Profesores.cs">
       <SubType>Form</SubType>
@@ -155,6 +167,12 @@
     <Compile Include="Welcome.Designer.cs">
       <DependentUpon>Welcome.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Asignaturas.resx">
+      <DependentUpon>Asignaturas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Calificaciones.resx">
+      <DependentUpon>Calificaciones.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Docentes.resx">
       <DependentUpon>Docentes.cs</DependentUpon>
     </EmbeddedResource>
@@ -179,8 +197,8 @@
     <EmbeddedResource Include="Matriculas.resx">
       <DependentUpon>Matriculas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NotasEstudiante.resx">
-      <DependentUpon>NotasEstudiante.cs</DependentUpon>
+    <EmbeddedResource Include="NOTAS.resx">
+      <DependentUpon>NOTAS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Profesores.resx">
       <DependentUpon>Profesores.cs</DependentUpon>
