--- a/SistemaAcademico.csproj
+++ b/SistemaAcademico.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publicar\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -55,6 +55,22 @@
     <Reference Include="MetroFramework">
       <HintPath>..\..\..\ConversoresdeUnidad\packages\MetroModernUI.1.3.5.0\lib\net35\MetroFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportViewer.2015.Runtime.12.0.2.2402\lib\Microsoft.ReportViewer.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportViewer.2015.Runtime.12.0.2.2402\lib\Microsoft.ReportViewer.ProcessingObjectModel.DLL</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportViewer.2015.Runtime.12.0.2.2402\lib\Microsoft.ReportViewer.WebForms.DLL</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportViewer.WinForms.v12.12.0.0.1\lib\Microsoft.ReportViewer.WinForms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
       <Private>True</Private>
@@ -77,17 +93,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Asignaturas.cs">
+    <Compile Include="Asitencias.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Asignaturas.Designer.cs">
-      <DependentUpon>Asignaturas.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Calificaciones.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Calificaciones.Designer.cs">
-      <DependentUpon>Calificaciones.cs</DependentUpon>
+    <Compile Include="Asitencias.Designer.cs">
+      <DependentUpon>Asitencias.cs</DependentUpon>
     </Compile>
     <Compile Include="Conexion.cs" />
     <Compile Include="DataSet.cs">
@@ -122,6 +132,24 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="InformeAlumnos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InformeAlumnos.Designer.cs">
+      <DependentUpon>InformeAlumnos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InformeMaterias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InformeMaterias.Designer.cs">
+      <DependentUpon>InformeMaterias.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InformeMatricula.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InformeMatricula.Designer.cs">
+      <DependentUpon>InformeMatricula.cs</DependentUpon>
+    </Compile>
     <Compile Include="LogoINU.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,11 +174,11 @@
     <Compile Include="Matriculas.Designer.cs">
       <DependentUpon>Matriculas.cs</DependentUpon>
     </Compile>
-    <Compile Include="NOTAS.cs">
+    <Compile Include="NotasEstudiante.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NOTAS.Designer.cs">
-      <DependentUpon>NOTAS.cs</DependentUpon>
+    <Compile Include="NotasEstudiante.Designer.cs">
+      <DependentUpon>NotasEstudiante.cs</DependentUpon>
     </Compile>
     <Compile Include="Profesores.cs">
       <SubType>Form</SubType>
@@ -160,6 +188,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportescs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportescs.Designer.cs">
+      <DependentUpon>Reportescs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="rptDocentes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="rptDocentes.Designer.cs">
+      <DependentUpon>rptDocentes.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Welcome.cs">
       <SubType>Form</SubType>
@@ -167,11 +207,8 @@
     <Compile Include="Welcome.Designer.cs">
       <DependentUpon>Welcome.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Asignaturas.resx">
-      <DependentUpon>Asignaturas.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Calificaciones.resx">
-      <DependentUpon>Calificaciones.cs</DependentUpon>
+    <EmbeddedResource Include="Asitencias.resx">
+      <DependentUpon>Asitencias.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Docentes.resx">
       <DependentUpon>Docentes.cs</DependentUpon>
@@ -185,6 +222,15 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="InformeAlumnos.resx">
+      <DependentUpon>InformeAlumnos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InformeMaterias.resx">
+      <DependentUpon>InformeMaterias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InformeMatricula.resx">
+      <DependentUpon>InformeMatricula.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LogoINU.resx">
       <DependentUpon>LogoINU.cs</DependentUpon>
     </EmbeddedResource>
@@ -197,8 +243,8 @@
     <EmbeddedResource Include="Matriculas.resx">
       <DependentUpon>Matriculas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NOTAS.resx">
-      <DependentUpon>NOTAS.cs</DependentUpon>
+    <EmbeddedResource Include="NotasEstudiante.resx">
+      <DependentUpon>NotasEstudiante.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Profesores.resx">
       <DependentUpon>Profesores.cs</DependentUpon>
@@ -213,6 +259,18 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Report1.rdlc" />
+    <EmbeddedResource Include="Report2.rdlc" />
+    <EmbeddedResource Include="Reportescs.resx">
+      <DependentUpon>Reportescs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rptDocentes.resx">
+      <DependentUpon>rptDocentes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RptIncripcion.rdlc" />
+    <EmbeddedResource Include="rptMateria.rdlc" />
+    <EmbeddedResource Include="RptMaterias.rdlc" />
+    <EmbeddedResource Include="RptMatricula.rdlc" />
     <EmbeddedResource Include="Welcome.resx">
       <DependentUpon>Welcome.cs</DependentUpon>
     </EmbeddedResource>
