--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="CircularProgressBar" version="2.6.6823.24527" targetFramework="net461" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1404.0" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.2015.Runtime" version="12.0.2.2402" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.WinForms.v12" version="12.0.0.1" targetFramework="net461" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
   <package id="WinFormAnimation" version="1.5.6298.3372" targetFramework="net461" />
 </packages>
